About my self page 1

--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Self - Manthan</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-Kv03Jb6Hgeyo5Id8pDQn6pbL9pf8ydK6HwGVIn4BP2hbjK3ZI7F43l0wI2y5OSbFPIv4S2T+Hs3DTiE7+FZWSg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+
 </head>
 
-<body class="dark-mode">
+<body>
     <div class="container">
         <h1 class="glow-text">Hi, I am <span id="nameSpan">Manthan</span></h1>
+        <div class="video-sec">
+
+        
         <video id="nameVideo" autoplay loop muted>
             <source src="./video/lv_0_20240703135734.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+    </div>
     </div>
     
     <div class="developer-card">
